# Coffeeshop_Task_Motion_Planning

./: README.md  prob.pddl
visits_domain/: dom.pddl
visits_module/src/: CMakeLists.txt  VisitSolver.cpp  VisitSolver.h
